Add dashboard UI and Ruby 3.4 support
Dashboard Features:
- Web UI for monitoring autoscaler events and status
- ScaleEvent model for tracking scaling history
- Dashboard engine with overview, workers, and events pages
- Event recording configuration (record_events, record_all_events)
- New rake tasks: events, cleanup_events
- Generator for dashboard migration

Ruby 3.4 Support:
- Added Ruby 3.4 to CI test matrix
- All files already have frozen_string_literal pragma

Tests:
- Added comprehensive tests for ScaleEvent model
- Added comprehensive tests for Dashboard module
- 432 tests passing, 91% line coverage

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -45,6 +45,7 @@ Metrics/ClassLength:
   Max: 200
   Exclude:
     - 'spec/**/*'
+    - 'lib/solid_queue_heroku_autoscaler/scaler.rb' # Event recording adds lines but keeps cohesion
 
 # Relax module length
 Metrics/ModuleLength:
