Add GitHub Actions workflow for dummy app integration tests
Added new "integration" job to CI workflow that:
- Runs on ubuntu-latest with Ruby 3.3
- Installs sqlite3 system dependencies
- Installs dependencies for both dummy apps
- Runs Rails dummy app tests (62 tests)
- Runs Sinatra dummy app tests (58 tests)

This ensures the queue name, priority, and E2E scaling tests
are run as part of CI to catch configuration regressions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,3 +57,38 @@ jobs:
       - name: Run RuboCop
         run: bundle exec rubocop --parallel
         continue-on-error: true
+
+  integration:
+    name: Integration Tests (Dummy Apps)
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libsqlite3-dev
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.3'
+          bundler-cache: true
+
+      - name: Install Rails dummy app dependencies
+        working-directory: spec/dummy_rails
+        run: bundle install
+
+      - name: Install Sinatra dummy app dependencies
+        working-directory: spec/dummy_sinatra
+        run: bundle install
+
+      - name: Run Rails dummy app tests
+        working-directory: spec/dummy_rails
+        run: bin/rails runner test_autoscaler.rb
+
+      - name: Run Sinatra dummy app tests
+        working-directory: spec/dummy_sinatra
+        run: bundle exec ruby test_autoscaler.rb
