--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,10 @@
 name: Release
 
 on:
-  push:
+  # Only run after CI workflow completes successfully
+  workflow_run:
+    workflows: ["CI"]
+    types: [completed]
     branches: [main, master]
   workflow_dispatch:
     inputs:
@@ -15,8 +18,8 @@ jobs:
   release:
     name: Release to RubyGems
     runs-on: ubuntu-latest
-    # Only run if tests pass
-    needs: []
+    # Only run if CI workflow succeeded (not on workflow_dispatch which bypasses this)
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
     
     steps:
       - name: Checkout code
